# iphone-pilot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/iphone/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
helper/: iphone_event.swift
iphone_pilot/: __init__.py  actions.py  agent.py  config.py  main.py  screen.py  skills.py
