[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iphone-pilot"
version = "0.1.0"
description = "Control your iPhone via iPhone Mirroring - toolkit for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Phelipe Xavier" },
]
keywords = ["iphone", "automation", "macos", "iphone-mirroring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
iphone-pilot = "iphone_pilot.main:cli"

[project.urls]
Homepage = "https://github.com/phelipexavier/iphone-pilot"
